<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Selfie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- registration -->
    <string name="title_reg">Registration Form</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="singFB">Sign up with FB</string>
    <string name="resetPass">Reset pass</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="member">Not a member yet?</string>
    <string name="or">or</string>
    <string name="errorNitSign">Not correct username or password!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- signUp -->
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="pass">Your password</string>
    <string name="createAccount">Create Account Or Die</string>
    <string name="repeatPass">Repeat your password</string>
    <string name="title_activity_reset_pass">Reset Pass Form</string>
    <string name="euserName">Username is not valid</string>
    <string name="eEmail">Email is not valid</string>
    <string name="ePass">Passwords are not valid</string>
    <string name="erepeat">Passwords are not equal</string>
    <!-- reset -->
    <string name="send">Send</string>
    <string name="link">A link was sent to email to reset password</string>

    <!-- main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="croptool">Crop tool</string>
    <string name="crop">Crop</string>
    <string name="cut">Cut</string>
    <string name="filters">Filters</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_profile_fragment">Profile_fragment</string>
    <string name="selfie">Selfie</string>
    <!-- profile -->
    <string name="coutSelfie">No of selfies :</string>
    <string name="editProfile">Edit profile</string>
    <string name="edit">Edit</string>
    <string name="changePassword">Change Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="title_activity_profile_edit_fragment">ProfileEditFragment</string>
    <string name="title_activity_change_password_fragment">ChangePasswordFragment</string>
    <string name="curPass">Current password</string>
    <string name="newPass">New password</string>
    <string name="newPassAgain">New password, again</string>
    <string name="title_activity_select">SelectActivity</string>

    <!-- select image -->
    <string name="eselectImage">Please, select photo</string>
    <string name="backgroud">Background</string>
    <string name="f1">Normal</string>
    <string name="f2">Amaro</string>
    <string name="f3">MayFair</string>
    <string name="f4">Rise</string>
    <string name="f5">Hudson</string>
    <string name="f6">Hefe</string>
    <string name="f7">Valencia</string>
    <string name="f8">X-pro</string>
    <string name="f9">Sierra</string>
    <string name="f10">Willow</string>
    <string name="f11">Lo-fi</string>
    <string name="f12">Earlybird</string>
    <string name="f13">Sytro</string>
    <string name="f14">Toaster</string>
    <string name="f15">Brannan</string>
    <string name="b1">Desert</string>
    <string name="b2">Sea</string>
    <string name="b3">Mountains</string>
    <string name="b4">Forest</string>
    <string name="b5">Green</string>
    <string name="buy">Buy</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Standart">Standart</string>
    <!-- fb -->
    <string name="facebook_app_id">799554853444316</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_big_crop">BigCropActivity</string>
    <string name="title_activity_cut">CutActivity</string>
    <string name="title_activity_content_fragment">ContentFragment</string>
    <string name="contest">Contest</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_share">ShareActivity</string>

    <!-- one selfie -->
    <string name="deleteOneSelfie">Are you sure to delete selfie?</string>
    <string name="deleteDone">Selfie is deleted</string>
    <string name="title_activity_one_selfie">OneSelfieActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_add_filter">AddFilterActivity</string>

    <!-- profile edit -->
    <string name="general">GENERAL</string>
    <string name="personalInfo">PERSONAL INFO</string>

    <!-- share -->
    <string name="addDesc">Add a description</string>
    <string name="comments">comments</string>
    <string name="crowns">crowns</string>
    <string name="likes">likes</string>
    <string name="inContest">In contest</string>
    <string name="drafts">Drafts</string>
    <string name="votes">Votes left</string>
    <string name="mostRecent">Most recent</string>
    <string name="payText">Do you want to remove our cool logo from your selfies? just pay 4.99$ and forget about it!</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tutorialTitle1">Welcome to SelfieKing! Get started with our app by taking a photo of yourself.</string>
    <string name="firstStep">First step</string>
    <string name="firstStepDesc">Use camera or upload a photo from a gallery.Crop the photo and cut a Selfie with a finger tool.</string>
    <string name="secondStep">Second step</string>
    <string name="SecondStepDesc">Choose a background (you can also upload it from camera gallery or take a new background photo). Position your Selfie on the background, play with the sizes and add our cool filters to finish your masterpiece.</string>
    <string name="thirdStep">Final step</string>
    <string name="thirdStepDesc">As the final step, put description next to your Selfie and it’s ready to go!</string>
    <string name="tutorialTitle2">What’s next?</string>
    <string name="tutorialTitle3">Contest Rules</string>
    <string name="tutorialTitle2Desc">Publish your Selfie to our monthly Contest and win $1000 if it scores the greatest number of Crowns by the end of the month (see Contest rules on the next slide)</string>
    <string name="tutorialTitle2Desc2">Share Selfie in social networks or just save it as a draft (you may choose to add it to the contest later) </string>
    <string name="tutorialTitle3Desc">Our cool Contest takes place monthly and every SelfieKing user can join it by submitting a Selfie created with the help of our app (you must agree to the Terms and Conditions first).

\n\nWhen you post a Selfie to the Contest, you are given 5 votes for each Selfie you add which you can use to rate other participant’s Selfies. Give each Selfie up to 5 crowns and encourage your friends to vote for you. 

\n\nA Selfie which scores the greatest amount of Crowns during a month wins the Contest and $1000 prize goes to the winner’s PayPal account! </string>

</resources>